--- a/quiz-project/assets/css/style-quiz.css
+++ b/quiz-project/assets/css/style-quiz.css
@@ -148,7 +148,7 @@ input[type="button"].option-btn:hover {
     top: 4px;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(/assets/img/exclamacao.png);
+    background-image: url(assets/img/exclamacao.png);
     background-size: contain;
     background-position: center;
     bottom: 50px;
